--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,4 @@ envlist = py27, py34
 
 [testenv]
 deps = -rrequirements-test.txt
-commands = py.test --pep8 --cov-report html --cov coolfig coolfig
+commands = py.test -rxs -s --pep8 --cov-report html --cov coolfig coolfig
