Improve test scripts

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,9 @@
 [tox]
-envlist = py27, py34
+envlist = {py27,py34}{,-sqlalchemy,-django}
 
 [testenv]
-deps = -rrequirements-test.txt
-commands = py.test -rxs -s --flake8 --cov-report html --cov coolfig coolfig
+deps =
+    -rrequirements-test.txt
+    sqlalchemy: sqlalchemy
+    django: django-environ
+commands = py.test -rxs -s --flake8 --cov-report= --cov-append --cov coolfig coolfig
