--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,37 @@
 [tox]
-envlist = {py27,py34}{,-sqlalchemy,-django}
+# Having the .tox directory in the project directory slows down the
+# `pip install -e .` step required by `usedevelop = true` considerably.
+# By moving it out of the way (~500MB), we trim test execution time by > 80%.
+toxworkdir = {homedir}/.toxenvs/coolfig
+envlist =
+    coverage_erase,
+    {py27,py34,pypy19}-sqlalchemy,
+    {py27,py34,pypy19}-django-dj{15,16,17,18},
+    {py27,pypy19}-dj14,
+    flake8,
+    coverage_report
 
 [testenv]
 deps =
     -rrequirements-test.txt
     sqlalchemy: sqlalchemy
     django: django-environ
-commands = py.test -rxs -s --flake8 --cov-report= --cov-append --cov coolfig coolfig
+    dj14: django>=1.4,<1.5
+    dj15: django>=1.5,<1.6
+    dj16: django>=1.6,<1.7
+    dj17: django>=1.7,<1.8
+    dj18: django>=1.8,<1.9
+    dj19: django>=1.9,<1.10
+commands = py.test -rxs --cov-report= --cov-append --cov coolfig coolfig
+
+[testenv:coverage_erase]
+commands = coverage erase
+deps = coverage
+
+[testenv:flake8]
+commands = flake8 coolfig
+deps = flake8
+
+[testenv:coverage_report]
+commands = coverage html
+deps = coverage
