Fix build matrix

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envlist =
     coverage_erase,
     {py27,py34,pypy19}-sqlalchemy,
     {py27,py34,pypy19}-django-dj{15,16,17,18},
-    {py27,pypy19}-dj14,
+    {py27,pypy19}-django-dj14,
     flake8,
     coverage_report
 
