--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,23 @@ sudo: false
 
 env:
   matrix:
-    - TOXENV=py27-dj15
-    - TOXENV=py27-dj16
-    - TOXENV=py27-dj17
-    - TOXENV=py27-dj18
-    - TOXENV=py34-dj15
-    - TOXENV=py34-dj16
-    - TOXENV=py34-dj17
-    - TOXENV=py34-dj18
-    - TOXENV=pypy19-dj15
-    - TOXENV=pypy19-dj16
-    - TOXENV=pypy19-dj17
-    - TOXENV=pypy19-dj18
-    - TOXENV=py27-dj14
-    - TOXENV=pypy19-dj14
+    - TOXENV=py27-sqlalchemy
+    - TOXENV=py34-sqlalchemy
+    - TOXENV=pypy19-sqlalchemy
+    - TOXENV=py27-django-dj15
+    - TOXENV=py27-django-dj16
+    - TOXENV=py27-django-dj17
+    - TOXENV=py27-django-dj18
+    - TOXENV=py34-django-dj15
+    - TOXENV=py34-django-dj16
+    - TOXENV=py34-django-dj17
+    - TOXENV=py34-django-dj18
+    - TOXENV=pypy19-django-dj15
+    - TOXENV=pypy19-django-dj16
+    - TOXENV=pypy19-django-dj17
+    - TOXENV=pypy19-django-dj18
+    - TOXENV=py27-django-dj14
+    - TOXENV=pypy19-django-dj14
     - TOXENV=flake8
 
 cache:
