Update tests layout

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,9 @@
 toxworkdir = {homedir}/.toxenvs/coolfig
 envlist =
     coverage_erase,
-    {py27,py34,pypy19}-sqlalchemy,
-    {py27,py34,pypy19}-django-dj{15,16,17,18,19},
-    {py27,pypy19}-django-dj14,
+    {py27,py36,pypy2}-sqlalchemy,
+    {py27,pypy2}-django-dj{18,19,110,111},
+    {py36,pypy3}-django-dj{18,19,110,111,20,21},
     flake8,
     coverage_report
 
@@ -16,12 +16,12 @@ deps =
     -rrequirements-test.txt
     sqlalchemy: sqlalchemy
     django: django-environ
-    dj14: django>=1.4,<1.5
-    dj15: django>=1.5,<1.6
-    dj16: django>=1.6,<1.7
-    dj17: django>=1.7,<1.8
     dj18: django>=1.8,<1.9
     dj19: django>=1.9,<1.10
+    dj110: django>=1.10,<1.11
+    dj111: django>=1.11,<1.12
+    dj20: django>=2.0,<2.1
+    dj21: django>=2.1,<2.2
 commands = py.test -rxs --cov-report= --cov-append --cov coolfig coolfig
 
 [testenv:coverage_erase]
