Extend linting to black and isort

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
     {py27,py36,pypy2}-sqlalchemy,
     {py27,pypy2}-django-dj{18,19,110,111},
     {py36,pypy3}-django-dj{18,19,110,111,20,21},
-    flake8,
+    py36-lint,
     coverage_report
 
 [testenv]
@@ -28,10 +28,28 @@ commands = py.test -rxs --cov-report= --cov-append --cov coolfig coolfig
 commands = coverage erase
 deps = coverage
 
-[testenv:flake8]
-commands = flake8 coolfig
-deps = flake8
+[testenv:py36-lint]
+commands =
+    isort --check --recursive coolfig
+    flake8 --ignore=E203 coolfig
+    black --check --line-length 79 coolfig
+deps =
+    isort
+    flake8
+    black
 
 [testenv:coverage_report]
 commands = coverage html
 deps = coverage
+
+[isort]
+multi_line_output=3
+line_length=79
+lines_after_imports=2
+lines_between_types=0
+atomic=true
+order_by_type=true
+include_trailing_comma=true
+use_parentheses=true
+default_section=THIRDPARTY
+known_first_party=coolfig
