--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 toxworkdir = {homedir}/.toxenvs/coolfig
 envlist =
     coverage_erase,
-    {py27,py36,pypy2}-sqlalchemy,
+    {py27,py36,pypy2,pypy3}-sqlalchemy,
     {py27,pypy2}-django-dj{18,19,110,111},
     {py36,pypy3}-django-dj{18,19,110,111,20,21},
     py36-lint,
