--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,16 @@ envlist =
     {py27,py36,pypy2,pypy3}-sqlalchemy,
     {py27,pypy2}-django-dj{18,19,110,111},
     {py36,pypy3}-django-dj{18,19,110,111,20,21},
-    py36-lint,
+    lint,
     coverage_report
 
 [testenv]
+basepython =
+    py27: python2.7
+    py36: python3.6
+    pypy2: pypy
+    pypy3: pypy3
+    lint: python3.6
 deps =
     -rrequirements-test.txt
     sqlalchemy: sqlalchemy
@@ -28,7 +34,7 @@ commands = py.test -rxs --cov-report= --cov-append --cov coolfig coolfig
 commands = coverage erase
 deps = coverage
 
-[testenv:py36-lint]
+[testenv:lint]
 commands =
     isort --check --recursive coolfig
     flake8 --ignore=E203 coolfig
@@ -43,13 +49,13 @@ commands = coverage html
 deps = coverage
 
 [isort]
-multi_line_output=3
-line_length=79
-lines_after_imports=2
-lines_between_types=0
-atomic=true
-order_by_type=true
-include_trailing_comma=true
-use_parentheses=true
-default_section=THIRDPARTY
-known_first_party=coolfig
+multi_line_output = 3
+line_length = 79
+lines_after_imports = 2
+lines_between_types = 0
+atomic = true
+order_by_type = true
+include_trailing_comma = true
+use_parentheses = true
+default_section = THIRDPARTY
+known_first_party = coolfig
