--- a/tox.ini
+++ b/tox.ini
@@ -57,5 +57,6 @@ atomic = true
 order_by_type = true
 include_trailing_comma = true
 use_parentheses = true
+not_skip=__init__.py
 default_section = THIRDPARTY
 known_first_party = coolfig
